# Paddle-Lite

./: CMakeLists.txt
cmake/: cuda.cmake  cudnn.cmake  generic.cmake  lite.cmake
docs/develop_guides/: add_new_pass.md  add_operation.md
lite/api/: CMakeLists.txt  apis_test.cc  benchmark.cc  cxx_api.cc  cxx_api_impl.cc  cxx_api_test.cc  efficientnet_b0_test.cc  fast_rcnn_test.cc  inceptionv4_test.cc  light_api.cc  light_api.h  light_api_mem_leak.cc  light_api_test.cc  lite_api_test_helper.h  lite_multithread_test.cc  mobilenetv1_int16_test.cc  mobilenetv1_int8_test.cc  mobilenetv1_light_api.cc  mobilenetv1_opt_quant_test.cc  mobilenetv1_ssd_test.cc  mobilenetv1_test.cc  mobilenetv1_yolov3_test.cc  mobilenetv2_test.cc  model_run_test_image.cc  model_test.cc  model_test_classify.cc  model_test_detection.cc  ocr_attention_test.cc  opt.cc  paddle_api.cc  paddle_api.h  paddle_api_test.cc  paddle_use_kernels.h  paddle_use_ops.h  resnet18_test.cc  resnet50_test.cc  resnet50_test_fpga.cc  shufflenetv2_test.cc  test_classify_lite_bm.cc  test_googlenet_lite.cc  (+9 more)
lite/core/: context.h  context_test.cc  device_info.cc  kernel_test.cc  lite_gtest_main.cc  lite_tensor_test.cc  mem_usage.h  memory.h  memory_test.cc  op_lite.cc  op_lite.h  op_lite_test.cc  op_registry.h  optimizer.h  optimizer_test.cc  program.cc  program.h  scope_test.cc  tensor.cc  tensor.h  type_system.h  type_system_test.cc  types_test.cc
lite/fluid/: CMakeLists.txt  rw_lock.h  shared_mutex.h
lite/gen_code/: gen_code.cc  gen_code_test.cc  generated_code_test.cc  paddle_code_generator.cc
lite/kernels/xpu/: CMakeLists.txt  xpu_xdnn_xtcl_test.cc
lite/kernels/xpu/bridges/: batch_norm_op.cc  cast_op.cc  conv_op.cc  conv_op_test.cc  dropout_op.cc  elementwise_ops.cc  layer_norm_op.cc  lookup_table_op.cc  matmul_op.cc  mul_op.cc  mul_op_test.cc  pool_op.cc  reshape_op.cc  scale_op.cc  slice_op.cc  softmax_op.cc  stack_op.cc  transpose_op.cc  yolo_box_op.cc
lite/model_parser/: CMakeLists.txt  compatibility_test.cc  compatible_pb.cc  compatible_pb_test.cc  cpp_desc.h  desc_apis.h  io_test.cc  model_parser.cc  model_parser.h  model_parser_test.cc  parser_test.cc  tensor_io.cc  tensor_io.h
lite/operators/: CMakeLists.txt  __xpu__embedding_with_eltwise_add_op.cc  __xpu__fc_op.cc  (+268 more)
(+504 files in other folders)
